# ROADEF-Challenge-2020

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindGUROBI.cmake
experiments/: run.py  solution_checker.py
src/: heur_benders.cpp  heur_benders.h  heur_greedy.cpp  heur_greedy.h  main.cpp  mip.cpp  mip.h  roadef2020.cpp  roadef2020.h  utils.h
